# Calculator

./: .coveragerc  .gitignore  README.md  database.sqlite  pyproject.toml  tasks.py  test-database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL.mmd  viikko3.md
laskarit/viikko3/source_and_image_files/: sekvenssikaavio.mmd
src/: config.py  database_connection.py  index.py  initialize_database.py
src/data/: database.sqlite  database.sqlite-journal  test-database.sqlite
src/entities/: calculation.py  calculation_manager.py  calculations.py
src/repositories/: calculator_repository.py
src/services/: about_service.py  calculator_service.py  calculator_services.py  history_service.py  menubar_service.py
src/tests/entities/: calculation_manager_test.py  calculation_test.py  calculations_test.py
src/tests/repository/: calculator_repository_test.py
src/tests/services/: calculator_service_test.py  calculator_services_test.py  history_service_test.py
src/ui/: about_view.py  calculator_view.py  history_view.py  ui.py
