[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Olli-Pekka Turtio <olli-pekka.turtio@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
invoke = "^1.7.3"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
